--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
       </div>
       <div class="about-text">
         <h1>
-          Passionate Front-End Engineer Ready to Elevate
+          Passionate Front_End Engineer Ready to Elevate
           <span>User Experiences!</span>
         </h1>
         <p>
